--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -455,8 +455,14 @@
 }
 
 /* Lists - Notion style */
-.ProseMirror ul,
+.ProseMirror ul {
+  list-style-type: disc;
+  padding-left: 1.5rem;
+  margin: 0.5rem 0;
+}
+
 .ProseMirror ol {
+  list-style-type: decimal;
   padding-left: 1.5rem;
   margin: 0.5rem 0;
 }
